k8s-rendered/osticket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osticket
  namespace: osticket-private
spec:
  replicas: 3
  selector:
    matchLabels:
      app: osticket
  template:
    metadata:
      labels:
        app: osticket
    spec:
      containers:
        - name: osticket
          image: "campbellsoftware/osticket:1.18.1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 20
