k8s-rendered/osticket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osticket
  namespace: osticket-private
spec:
  type: NodePort
  selector:
    app: osticket
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30083
      protocol: TCP
